Google Search Console support

--- a/alphagruis.html
+++ b/alphagruis.html
@@ -24,13 +24,13 @@
     <meta property="og:title" content="alphagruis">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta name="google-site-verification" content="...">
+  <meta name="google-site-verification" content="RteVCO1c-kNYs50mH-b7y9XZl0PNqV8m9c8mI06p0CQ" />
 </head>
   <body class="u-body u-custom-color-10 u-stick-footer"><header class="u-clearfix u-custom-color-11 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-container-style u-group u-shape-rectangle u-group-1" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="5000" data-animation-direction="">
           <div class="u-container-layout u-container-layout-1">
             <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis.svg">
-            <a href="https://github.com/alphagruis" class="u-align-center u-border-2 u-border-active-custom-color-6 u-border-hover-custom-color-6 u-btn u-button-style u-none u-text-body-alt-color u-btn-1" target="_blank"><b>alphagruis</b>
+            <a href="https://github.com/alphagruis" class="u-align-center u-border-2 u-border-active-custom-color-6 u-border-hover-custom-color-6 u-btn u-button-style u-none u-text-body-alt-color u-btn-1"><b>alphagruis</b>
             </a><span class="u-align-center u-file-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><img src="images/github-mark.svg" alt=""></span>
           </div>
         </div>
@@ -52,19 +52,19 @@
             <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-1" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="10000" data-animation-direction="">
               <div class="u-container-layout u-container-layout-1">
                 <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-etc.svg">
-                <a href="https://github.com/alphagruis/alphagruis-etc" class="u-align-center u-border-2 u-border-active-custom-color-5 u-border-hover-custom-color-5 u-btn u-button-style u-none u-text-body-alt-color u-btn-1" target="_blank">Ethereum Classic Miner</a>
+                <a href="https://github.com/alphagruis/alphagruis-etc" class="u-align-center u-border-2 u-border-active-custom-color-5 u-border-hover-custom-color-5 u-btn u-button-style u-none u-text-body-alt-color u-btn-1">Ethereum Classic Miner</a>
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="15000" data-animation-direction="">
               <div class="u-container-layout u-container-layout-2">
                 <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-2" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-eth.svg">
-                <a href="https://github.com/alphagruis/alphagruis-eth" class="u-align-center u-border-2 u-border-active-custom-color-2 u-border-hover-custom-color-2 u-btn u-button-style u-none u-text-body-alt-color u-btn-2" target="_blank">Ethereum Miner</a>
+                <a href="https://github.com/alphagruis/alphagruis-eth" class="u-align-center u-border-2 u-border-active-custom-color-2 u-border-hover-custom-color-2 u-btn u-button-style u-none u-text-body-alt-color u-btn-2">Ethereum Miner</a>
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="20000" data-animation-direction="">
               <div class="u-container-layout u-container-layout-3">
                 <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-3" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-rvn.svg">
-                <a href="https://github.com/alphagruis/alphagruis-rvn" class="u-align-center u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-4 u-btn u-button-style u-none u-text-body-alt-color u-btn-3" target="_blank">Ravencoin Miner</a>
+                <a href="https://github.com/alphagruis/alphagruis-rvn" class="u-align-center u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-4 u-btn u-button-style u-none u-text-body-alt-color u-btn-3">Ravencoin Miner</a>
               </div>
             </div>
           </div>
