--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta name="google-site-verification" content="RteVCO1c-kNYs50mH-b7y9XZl0PNqV8m9c8mI06p0CQ" />
+<link rel="icon" href="favicons/alphagruis.ico" sizes="any">
+<link rel="icon" href="favicons/alphagruis.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="favicons/alphagruis.png">
 </head>
   <body data-home-page="alphagruis.html" data-home-page-title="alphagruis" class="u-body u-custom-color-10 u-stick-footer"><header class="u-clearfix u-custom-color-11 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-container-style u-group u-shape-rectangle u-group-1" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="5000" data-animation-direction="">
