Update and maintenance
Added alphagruis-etc page.
Added alphagruis-eth page.
Added alphagruis-rvn page.

--- a/alphagruis-eth.html
+++ b/alphagruis-eth.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="alphagruis, mining, miner, ethereum, ethereum classic, ravencoin">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>alphagruis</title>
+    <title>alphagruis-eth</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="alphagruis.css" media="screen">
+<link rel="stylesheet" href="alphagruis-eth.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
@@ -22,7 +22,7 @@
 		"logo": "images/alphagruis.svg"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="alphagruis">
+    <meta property="og:title" content="alphagruis-eth">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta name="google-site-verification" content="RteVCO1c-kNYs50mH-b7y9XZl0PNqV8m9c8mI06p0CQ" />
@@ -30,7 +30,7 @@
 <link rel="icon" href="favicons/alphagruis.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="favicons/alphagruis.png">
 </head>
-  <body data-home-page="alphagruis.html" data-home-page-title="alphagruis" class="u-body u-custom-color-10 u-stick-footer"><header class="u-align-left u-clearfix u-custom-color-11 u-header u-sticky u-sticky-9576 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><a href="alphagruis.html" data-page-id="282799624" class="u-align-center u-border-1 u-border-grey-60 u-image u-image-round u-logo u-radius-5 u-image-1" data-image-width="420" data-image-height="420" title="alphagruis's Home">
+  <body class="u-body u-custom-color-10 u-stick-footer"><header class="u-align-left u-clearfix u-custom-color-11 u-header u-sticky u-sticky-9576 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><a href="alphagruis.html" data-page-id="282799624" class="u-align-center u-border-1 u-border-grey-60 u-image u-image-round u-logo u-radius-5 u-image-1" data-image-width="420" data-image-height="420" title="alphagruis's Home">
         <img src="images/alphagruis.svg" class="u-logo-image u-logo-image-1">
       </a><nav class="u-align-right u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-menu-1" data-responsive-from="XL">
         <div class="menu-collapse">
@@ -64,38 +64,40 @@
       </p><div class="u-align-center u-border-1 u-border-grey-70 u-expanded-width u-line u-line-horizontal u-line-1"></div></header>
     <section class="u-clearfix u-section-1" id="sec-1ce9">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis.svg" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="5000" data-animation-direction="">
-        <p class="u-align-center u-small-text u-text u-text-grey-50 u-text-variant u-text-1"> High performance miners designed and implemented by the&nbsp;<span style="font-weight: 700;">alphagruis</span>&nbsp;team.
+        <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-eth.svg" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="5000" data-animation-direction="">
+        <p class="u-align-center u-small-text u-text u-text-grey-50 u-text-variant u-text-1">
+          <span style="font-weight: 700;">alphagruis</span>'s Miner for Ethereum
         </p>
       </div>
     </section>
-    <section class="u-clearfix u-section-2" id="sec-9aaa">
+    <section class="u-align-left u-clearfix u-section-2" id="sec-9aaa">
       <div class="u-align-center u-border-1 u-border-grey-70 u-expanded-width u-line u-line-horizontal u-line-1"></div>
-      <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
-        <div class="u-layout">
-          <div class="u-layout-row">
-            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-1" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="10000" data-animation-direction="">
-              <div class="u-container-layout u-container-layout-1">
-                <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-etc.svg">
-                <a href="alphagruis-etc.html" data-page-id="1090001527" class="u-align-center u-border-none u-btn u-button-style u-none u-text-hover-grey-25 u-text-white u-btn-1">Ethereum Classic Miner</a>
-              </div>
-            </div>
-            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="15000" data-animation-direction="">
-              <div class="u-container-layout u-container-layout-2">
-                <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-2" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-eth.svg">
-                <a href="alphagruis-eth.html" data-page-id="41216856" class="u-align-center u-border-none u-btn u-button-style u-none u-text-hover-grey-25 u-text-white u-btn-2">Ethereum Miner</a>
-              </div>
-            </div>
-            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="20000" data-animation-direction="">
-              <div class="u-container-layout u-container-layout-3">
-                <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-3" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-rvn.svg">
-                <a href="alphagruis-rvn.html" data-page-id="239675693" class="u-align-center u-border-active-custom-color-4 u-border-hover-custom-color-4 u-border-none u-btn u-button-style u-none u-text-body-alt-color u-text-hover-grey-25 u-btn-3">Ravencoin Miner</a>
-              </div>
-            </div>
-          </div>
+      <div class="u-align-center u-container-style u-group u-shape-rectangle u-group-1">
+        <div class="u-container-layout u-valign-top u-container-layout-1">
+          <p class="u-text u-text-1">
+            <span style="font-size: 1.5rem;">
+              <span style="font-weight: 400;"></span> Description<br>
+            </span>
+            <br>alphagruis's Miner for Ethereum, is a high performance and rock solid miner, designed and implemented in C++, OpenCL and CUDA from scratch by the alphagruis team, a small group of skilled developers.<br>
+            <br>Try it, we are sure you will never want to go back.<br>
+            <br>
+            <span style="font-size: 1.5rem;">Mining Backends<br>
+            </span>
+            <br>OpenCL for AMD GPUs.<br>CUDA&nbsp;for NVIDIA GPUs.<br>
+            <br>The miner is able to run on hardware with AMD GPUs and NVIDIA GPUs at the same time.<br>
+            <br>
+            <span style="font-size: 1.5rem;">Mining Fee<br>
+            </span>
+            <br>alphagruis's Miner for Ethereum, is not free. The mining fee time is 36 seconds every 60 minutes minus 36 seconds. In other words, the fee amounts to 1%. The miner unambiguously, display on the console when the mining fee is active.<br>
+            <br>
+            <span style="font-size: 1.5rem;">Mining Transparency<br>
+            </span>
+            <br>alphagruis's Miner for Ethereum is completely transparent (the binary (executable machine code) is signed and not packed). The hashrate reported by the miner is not inflated and will match, on average, to the effective hashrate calculated by the pool. Without any tricks. Everything the miner does is displayed on the console and written to the log file. Nothing is left out.<br>
+            <br>alphagruis encourages everyone to scan all files contained in this repository with their favorite antivirus.
+          </p>
         </div>
       </div>
-      <a href="https://github.com/alphagruis" class="u-active-none u-align-center u-border-1 u-border-hover-palette-1-light-1 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-4"> https://github.com/alphagruis</a><span class="u-align-center u-file-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><img src="images/github-mark.svg" alt=""></span>
+      <a href="https://github.com/alphagruis/alphagruis-eth" class="u-active-none u-align-center u-border-1 u-border-hover-palette-1-light-1 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">https://github.com/alphagruis/alphagruis-eth</a><span class="u-align-center u-file-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><img src="images/github-mark.svg" alt=""></span>
     </section>
     
     
