--- a/alphagruis.html
+++ b/alphagruis.html
@@ -18,7 +18,8 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "alphagruis"
+		"name": "alphagruis",
+		"logo": "images/alphagruis.svg"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="alphagruis">
@@ -29,54 +30,76 @@
 <link rel="icon" href="favicons/alphagruis.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="favicons/alphagruis.png">
 </head>
-  <body class="u-body u-custom-color-10 u-stick-footer"><header class="u-clearfix u-custom-color-11 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-container-style u-group u-shape-rectangle u-group-1" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="5000" data-animation-direction="">
-          <div class="u-container-layout u-container-layout-1">
-            <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis.svg">
-            <a href="https://github.com/alphagruis" class="u-align-center u-border-2 u-border-active-custom-color-6 u-border-hover-custom-color-6 u-btn u-button-style u-none u-text-body-alt-color u-btn-1"><b>alphagruis</b>
-            </a><span class="u-align-center u-file-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><img src="images/github-mark.svg" alt=""></span>
+  <body class="u-body u-custom-color-10 u-stick-footer"><header class="u-align-left u-clearfix u-custom-color-11 u-header u-sticky u-sticky-9576 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><a href="alphagruis.html" data-page-id="282799624" class="u-align-center u-border-1 u-border-grey-60 u-image u-image-round u-logo u-radius-5 u-image-1" data-image-width="420" data-image-height="420" title="alphagruis's Home">
+        <img src="images/alphagruis.svg" class="u-logo-image u-logo-image-1">
+      </a><nav class="u-align-right u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-menu-1" data-responsive-from="XL">
+        <div class="menu-collapse">
+          <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
+            <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7b92"></use></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-7b92" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;" xml:space="preserve" class="u-svg-content"><g><rect y="36" width="302" height="30"></rect><rect y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
+</g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
+          </a>
+        </div>
+        <div class="u-custom-menu u-nav-container">
+          <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis-etc.html" style="padding: 10px 20px;">Ethereum Classic Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis-eth.html" style="padding: 10px 20px;">Ethereum Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis-rvn.html" style="padding: 10px 20px;">Ravencoin Miner</a>
+</li></ul>
+        </div>
+        <div class="u-custom-menu u-nav-container-collapse">
+          <div class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-80 u-sidenav u-sidenav-1">
+            <div class="u-sidenav-overflow">
+              <div class="u-menu-close u-line-1"></div>
+              <ul class="u-align-center u-custom-font u-nav u-popupmenu-items u-spacing-0 u-text-font u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-etc.html" style="padding: 10px 20px;">Ethereum Classic Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-eth.html" style="padding: 10px 20px;">Ethereum Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-rvn.html" style="padding: 10px 20px;">Ravencoin Miner</a>
+</li></ul>
+            </div>
           </div>
+          <div class="u-black u-menu-overlay u-opacity u-opacity-60"></div>
         </div>
-      </div></header>
+      </nav><p class="u-align-center u-small-text u-text u-text-variant u-text-1">alphagruis<br>
+      </p><div class="u-align-center u-border-1 u-border-grey-70 u-expanded-width u-line u-line-horizontal u-line-1"></div></header>
     <section class="u-clearfix u-section-1" id="sec-1ce9">
-      <div class="u-border-1 u-border-grey-50 u-expanded-width u-line u-line-horizontal u-line-1"></div>
-      <div class="u-container-style u-group u-shape-rectangle u-group-1">
-        <div class="u-container-layout u-valign-middle u-container-layout-1">
-          <p class="u-align-center u-small-text u-text u-text-grey-50 u-text-variant u-text-1"> High performance miners designed and implemented by the&nbsp;<span style="font-weight: 700;">alphagruis</span>&nbsp;team.
-          </p>
-        </div>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis.svg" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="5000" data-animation-direction="">
+        <p class="u-align-center u-small-text u-text u-text-grey-50 u-text-variant u-text-1"> High performance miners designed and implemented by the&nbsp;<span style="font-weight: 700;">alphagruis</span>&nbsp;team.
+        </p>
       </div>
     </section>
     <section class="u-clearfix u-section-2" id="sec-9aaa">
-      <div class="u-align-center u-border-1 u-border-grey-50 u-expanded-width u-line u-line-horizontal u-line-1"></div>
+      <div class="u-align-center u-border-1 u-border-grey-70 u-expanded-width u-line u-line-horizontal u-line-1"></div>
       <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
             <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-1" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="10000" data-animation-direction="">
               <div class="u-container-layout u-container-layout-1">
                 <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-etc.svg">
-                <a href="https://github.com/alphagruis/alphagruis-etc" class="u-align-center u-border-2 u-border-active-custom-color-5 u-border-hover-custom-color-5 u-btn u-button-style u-none u-text-body-alt-color u-btn-1">Ethereum Classic Miner</a>
+                <a href="alphagruis-etc.html" data-page-id="1090001527" class="u-align-center u-border-none u-btn u-button-style u-none u-text-hover-grey-25 u-text-white u-btn-1">Ethereum Classic Miner</a>
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="15000" data-animation-direction="">
               <div class="u-container-layout u-container-layout-2">
                 <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-2" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-eth.svg">
-                <a href="https://github.com/alphagruis/alphagruis-eth" class="u-align-center u-border-2 u-border-active-custom-color-2 u-border-hover-custom-color-2 u-btn u-button-style u-none u-text-body-alt-color u-btn-2">Ethereum Miner</a>
+                <a href="alphagruis-eth.html" data-page-id="41216856" class="u-align-center u-border-none u-btn u-button-style u-none u-text-hover-grey-25 u-text-white u-btn-2">Ethereum Miner</a>
               </div>
             </div>
             <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="20000" data-animation-direction="">
               <div class="u-container-layout u-container-layout-3">
                 <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-3" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-rvn.svg">
-                <a href="https://github.com/alphagruis/alphagruis-rvn" class="u-align-center u-border-2 u-border-active-custom-color-4 u-border-hover-custom-color-4 u-btn u-button-style u-none u-text-body-alt-color u-btn-3">Ravencoin Miner</a>
+                <a href="alphagruis-rvn.html" data-page-id="239675693" class="u-align-center u-border-active-custom-color-4 u-border-hover-custom-color-4 u-border-none u-btn u-button-style u-none u-text-body-alt-color u-text-hover-grey-25 u-btn-3">Ravencoin Miner</a>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <a href="https://github.com/alphagruis" class="u-active-none u-align-center u-border-1 u-border-hover-palette-1-light-1 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-4"> https://github.com/alphagruis</a><span class="u-align-center u-file-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><img src="images/github-mark.svg" alt=""></span>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-custom-color-11 u-footer u-footer" id="sec-1939"><div class="u-align-center u-border-1 u-border-grey-50 u-expanded-width u-line u-line-horizontal u-line-1"></div><p class="u-align-center u-small-text u-text u-text-grey-50 u-text-variant u-text-1">Copyright © 2021 <span style="font-weight: 700;">alphagruis</span>. All rights reserved.<br>
+    <footer class="u-align-center u-clearfix u-custom-color-11 u-footer u-footer" id="sec-1939"><div class="u-align-center u-border-1 u-border-grey-70 u-expanded-width u-line u-line-horizontal u-line-1"></div><p class="u-align-center u-small-text u-text u-text-grey-50 u-text-variant u-text-1">Copyright © 2021 <span style="font-weight: 700;">alphagruis</span>. All rights reserved.<br>
       </p></footer>
   </body>
 </html>
