Added missing field "url"
https://developers.google.com/search/docs/data-types/logo

--- a/alphagruis-etc.html
+++ b/alphagruis-etc.html
@@ -16,10 +16,11 @@
     
     
     <script type="application/ld+json">{
-		"@context": "http://schema.org",
+		"@context": "https://schema.org",
 		"@type": "Organization",
 		"name": "alphagruis",
-		"logo": "images/alphagruis.svg"
+		"url": "https://alphagruis.github.io",
+		"logo": "https://alphagruis.github.io/images/alphagruis.svg"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="alphagruis-etc">
