--- a/alphagruis-rvn.html
+++ b/alphagruis-rvn.html
@@ -31,38 +31,41 @@
 <link rel="icon" href="favicons/alphagruis.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="favicons/alphagruis.png">
 </head>
-  <body class="u-body u-custom-color-10 u-stick-footer"><header class="u-align-left u-clearfix u-custom-color-11 u-header u-sticky u-sticky-9576 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><a href="alphagruis.html" data-page-id="282799624" class="u-align-center u-border-1 u-border-grey-60 u-image u-image-round u-logo u-radius-5 u-image-1" data-image-width="420" data-image-height="420" title="alphagruis's Home">
+  <body class="u-body u-custom-color-10 u-stick-footer"><header class="u-align-left u-clearfix u-custom-color-11 u-header u-sticky u-sticky-9576 u-header" id="sec-a668" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><style class="u-sticky-style" data-style-id="9576">.u-sticky-fixed.u-sticky-9576, .u-body.u-sticky-fixed .u-sticky-9576 {
+box-shadow: 0 0 8px 0 rgba(102,102,102,1) !important
+}</style><a href="alphagruis.html" data-page-id="282799624" class="u-align-center u-border-1 u-border-grey-60 u-image u-image-round u-logo u-radius-5 u-image-1" data-image-width="420" data-image-height="420" title="alphagruis's Home">
         <img src="images/alphagruis.svg" class="u-logo-image u-logo-image-1">
-      </a><nav class="u-align-right u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-menu-1" data-responsive-from="XL">
+      </a><p class="u-align-center u-small-text u-text u-text-variant u-text-1">alphagruis<br>
+      </p><nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
         <div class="menu-collapse">
-          <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
-            <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7b92"></use></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-7b92" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;" xml:space="preserve" class="u-svg-content"><g><rect y="36" width="302" height="30"></rect><rect y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
-</g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
+          <a class="u-button-style u-nav-link" href="#" style="padding: 4px; font-size: calc(1em + 8px);">
+            <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+</symbol>
+</defs></svg>
           </a>
         </div>
         <div class="u-custom-menu u-nav-container">
-          <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis-etc.html" style="padding: 10px 20px;">Ethereum Classic Miner</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis-eth.html" style="padding: 10px 20px;">Ethereum Miner</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="alphagruis-rvn.html" style="padding: 10px 20px;">Ravencoin Miner</a>
+          <ul class="u-nav u-unstyled"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis.html" style="padding: 10px 0px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-etc.html" style="padding: 10px 0px;">Ethereum Classic Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-eth.html" style="padding: 10px 0px;">Ethereum Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-rvn.html" style="padding: 10px 0px;">Ravencoin Miner</a>
 </li></ul>
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
-          <div class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-80 u-sidenav u-sidenav-1">
+          <div class="u-black u-border-1 u-border-grey-90 u-container-style u-inner-container-layout u-opacity u-opacity-80 u-sidenav">
             <div class="u-sidenav-overflow">
-              <div class="u-menu-close u-line-1"></div>
-              <ul class="u-align-center u-custom-font u-nav u-popupmenu-items u-spacing-0 u-text-font u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-etc.html" style="padding: 10px 20px;">Ethereum Classic Miner</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-eth.html" style="padding: 10px 20px;">Ethereum Miner</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-rvn.html" style="padding: 10px 20px;">Ravencoin Miner</a>
+              <div class="u-menu-close"></div>
+              <ul class="u-align-center u-nav u-popupmenu-items u-text-active-custom-color-6 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis.html" style="padding: 10px 0px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-etc.html" style="padding: 10px 0px;">Ethereum Classic Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-eth.html" style="padding: 10px 0px;">Ethereum Miner</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="alphagruis-rvn.html" style="padding: 10px 0px;">Ravencoin Miner</a>
 </li></ul>
             </div>
           </div>
           <div class="u-black u-menu-overlay u-opacity u-opacity-60"></div>
         </div>
-      </nav><p class="u-align-center u-small-text u-text u-text-variant u-text-1">alphagruis<br>
-      </p><div class="u-align-center u-border-1 u-border-grey-70 u-expanded-width u-line u-line-horizontal u-line-1"></div></header>
+      </nav><div class="u-align-center u-border-1 u-border-grey-70 u-expanded-width u-line u-line-horizontal u-line-1"></div></header>
     <section class="u-clearfix u-section-1" id="sec-1ce9">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-align-center u-border-1 u-border-grey-50 u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" alt="" data-image-width="420" data-image-height="420" src="images/alphagruis-rvn.svg" data-animation-name="jello" data-animation-duration="2500" data-animation-delay="5000" data-animation-direction="">
@@ -97,8 +100,8 @@
             <br>alphagruis encourages everyone to scan all files contained in this repository with their favorite antivirus.
           </p>
         </div>
-      </div>
-      <a href="https://github.com/alphagruis/alphagruis-rvn" class="u-active-none u-align-center u-border-1 u-border-hover-palette-1-light-1 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">https://github.com/alphagruis/alphagruis-rvn</a><span class="u-align-center u-file-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><img src="images/github-mark.svg" alt=""></span>
+      </div><span class="u-align-center u-file-icon u-icon u-icon-circle u-text-palette-1-base u-icon-1"><img src="images/github-mark.svg" alt=""></span>
+      <a href="https://github.com/alphagruis/alphagruis-rvn" class="u-active-none u-align-center u-border-1 u-border-hover-palette-1-light-1 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">https://github.com/alphagruis/alphagruis-rvn</a>
     </section>
     
     
